--- a/portal/src/index.css
+++ b/portal/src/index.css
@@ -1,4 +1,16 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
     margin: 0;
     padding: 0;
+}
+
+html {
+    height: 100vh;
+}
+
+#root {
+    height: 100vh;
 }
