--- a/portal/src/index.css
+++ b/portal/src/index.css
@@ -14,3 +14,12 @@ html {
 #root {
     height: 100vh;
 }
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
+
+* {
+    box-sizing: border-box;
+}
